# tig-monorepo

./: .env  .gitignore  CNAME  Cargo.toml  Dockerfile.dev  Dockerfile.devel  Dockerfile.hackathon  Dockerfile.runtime  README.md  _config.yml  balanced_square.ipynb  benchmarking_guide.ipynb  cur_decomposition_redesign.md  cur_decomposition_walkthrough.md  docker-compose.yml  entrypoint.sh  min_superstring.ipynb  nginx.conf  output.map  package-lock.json  swagger.yaml  temp.py  travelling_salesman.ipynb  welcome.ipynb
tig-aarch64/: Cargo.toml  Dockerfile  Dockerfile.tig-aarch64-base  Dockerfile.tig-aarch64-builder  Dockerfile.tig-aarch64-dev  README.md  build-rust-project.sh  build.sh  solve.rs
tig-aarch64/src/: entry_point.rs  entry_point_template.rs  lib.rs
tig-algorithms/: Cargo.toml  README.md  build.rs
tig-algorithms/advances/: evidence_template.md
tig-algorithms/advances/knapsack/: classic_quadkp.md
tig-algorithms/advances/neuralnet_optimizer/: nova_prime_fgd.md
tig-algorithms/advances/satisfiability/: super_sat.md
tig-algorithms/advances/vector_search/: stat_filter.md
tig-algorithms/advances/vehicle_routing/: advanced_cw.md  hgs_advance.md  opt_route.md
tig-algorithms/examples/: benchmark_results.txt  large_benchmark_scores.csv  large_benchmark_summary.txt  sketchy_2049x3000_5seeds.txt  test_leverage.rs  test_multi_instance.rs
tig-algorithms/src/: lib.rs  solver_template.rs
tig-algorithms/src/balanced_square/: template.rs
tig-algorithms/src/cur_decomposition/: mod.rs  template.md  template.rs
tig-algorithms/src/energy_arbitrage/: mod.rs  pentest_agentic.rs  pentest_baseline.rs  template.md  template.rs
tig-algorithms/src/hypergraph/: mod.rs  template.cu  template.md  template.rs
tig-algorithms/src/influence_maximization/: mod.rs  template.md  template.rs
tig-algorithms/src/job_scheduling/: mod.rs  template.md  template.rs
tig-algorithms/src/knapsack/: mod.rs  template.md  template.rs
tig-algorithms/src/min_superstring/: mod.rs  template.rs
tig-algorithms/src/neuralnet_optimizer/: mod.rs  template.md  template.rs
tig-algorithms/src/nn_training/: mod.rs
tig-algorithms/src/satisfiability/: mod.rs  template.md  template.rs
tig-algorithms/src/travelling_salesman/: template.rs
tig-algorithms/src/vector_search/: mod.rs  simple_search.cu  simple_search.rs  template.cu  template.md  template.rs
tig-algorithms/src/vehicle_routing/: mod.rs  template.md  (+1 more)
tig-api/: Cargo.toml  README.md
tig-api/src/: lib.rs
tig-benchmarker/: .env  Cargo.toml  Dockerfile  Dockerfile.tig-aarch64-runtime  Dockerfile.tig-aarch64-slave  README.md  calc_apy.py  calc_reward_share.py  calc_rewards.py  check_reliability.py  config.json  docker-compose-master.yml  docker-compose-slave.yml  docker-compose.yml  index.html  index.js  main.py  master.py  master.yml  method_verification.py  requirements.txt  sample.env  setup.sh  slave.py  slave.yml  update_config.py  verify_batch.py
tig-benchmarker/common/: calcs.py  merkle_tree.py  structs.py  utils.py
tig-benchmarker/config/: pgpool.conf
tig-benchmarker/master/: Dockerfile  Dockerfile.master  benchmark_submitter.py  config.json  config.py  data.py  data_fetcher.py  difficulty_sampler.py  job_manager.py  main.py  master.py  proof_submitter.py  recomputer.py  requirements.txt  utils.py  webserver.py
tig-benchmarker/nginx/: nginx.conf
tig-benchmarker/postgres/: Dockerfile  init.sql
tig-benchmarker/slave/: Dockerfile  Dockerfile.slave  config.json  main.py  requirements.txt  slave.py  test.py
tig-benchmarker/src/: benchmarker.rs  future_utils.rs  lib.rs  main.rs  utils.rs
tig-benchmarker/tests/: data.py  db.py  merkle_tree.py
tig-benchmarker/tig_benchmarker/: Dockerfile  benchmark_submitter.py  config.py  data.py  data_fetcher.py  difficulty_manager.py  difficulty_sampler.py  event_bus.py  extension.py  job_manager.py  merkle_tree.py  requirements.txt  sql.py  structs.py  submissions_manager.py  utils.py
tig-benchmarker/ui/: Dockerfile  README.md  angular.json  package-lock.json  package.json
tig-binary/: Cargo.toml  Dockerfile  Dockerfile.tig-aarch64-base  README.md  build_aarch64.sh  build_x86_64_ptx.sh
tig-binary/scripts/: add_runtime_signature.py  build.sh  build_algorithm  build_binary  build_ptx  build_ptx.py  build_so  build_so.sh  toggle_aslr
tig-binary/src/: entry_point.rs  entry_point_template.rs  framework.cu  lib.old  main.rs  snapshot.rs
tig-challenges/: Cargo.toml  README.md
tig-challenges/docs/: knapsack.md  satisfiability.md  vehicle_routing.md
tig-challenges/src/: balanced_square.rs  hypergraph.cu  hypergraph.md  hypergraph.rs  hypergraph_partitioning.rs  knapsack.rs  lib.rs  min_superstring.rs  neuralnet_optimizer.cu  neuralnet_optimizer.md  neuralnet_optimizer.rs  nn_training.rs  optimiser.cu  optimizer.rs  satisfiability.rs  travelling_salesman.rs  vector_search.cu  vector_search.md  vector_search.rs  vehicle_routing.rs  zk.rs
tig-native-wrapper/: Cargo.toml
tig-native-wrapper/src/: dylib.rs  main.rs  solvers.rs
tig-protocol/: Cargo.toml  README.md
tig-protocol/src/: add_block.rs  bench.rs  block.rs  block_perf.rs  cache.rs  context.rs  contract_algorithms.rs  contract_benchmark.rs  contract_challenges.rs  contracts.rs  ctx.rs  err.rs  error.rs  lib.rs  protocol.rs  store.rs  submit_algorithm.rs  submit_benchmark.rs  submit_precommit.rs  submit_proof.rs  submit_topup.rs  util.rs  verify_proof.rs
tig-runtime/: Cargo.toml  README.md
tig-runtime/src/: main.rs
tig-structs/: Cargo.toml  README.md
tig-structs/src/: api.rs  config.rs  core.rs  lib.rs
tig-structs/tests/: core.rs
tig-utils/: Cargo.toml  README.md  main.py
tig-utils/src/: eth.rs  frontiers.rs  hash.rs  json.rs  kung.py  lib.rs  main.rs  merkle_tree.rs  number.rs  ofrontiers.rs  request.rs
tig-utils/tests/: eth.rs  frontiers.rs  merkle_tree.rs  number.rs
tig-verifier/: Cargo.toml  README.md
tig-verifier/src/: main.rs
tig-wasm/: Cargo.toml  README.md  build.rs
tig-wasm/src/: entry_point_template.rs  lib.rs
tig-worker/: Cargo.toml  README.md
tig-worker/src/: main.rs  worker.rs
(+3903 files in other folders)
