[workspace]
members = [
    "tig-algorithms",
    "tig-challenges",
    "tig-protocol",
    "tig-structs",
    "tig-utils",
    "tig-wasm",
    "tig-worker",
]
exclude = []
resolver = "2"

[workspace.package]
authors = ["TIG UG <contact@tig.foundation>", "Ying Chan <ying@tig.foundation>"]
repository = "https://github.com/tig-foundation/tig-monorepo"
edition = "2021"
readme = "README.md"

[profile.release]
lto = true
codegen-units = 1
