[workspace]
members = [
    "tig-algorithms",
    "tig-binary",
    "tig-challenges",
    "tig-protocol",
    "tig-runtime",
    "tig-structs",
    "tig-utils",
    "tig-verifier",
]
exclude = []
resolver = "2"

[workspace.package]
authors = ["TIG UG <contact@tig.foundation>", "Ying Chan <ying@tig.foundation>"]
repository = "https://github.com/tig-foundation/tig-monorepo"
edition = "2021"
readme = "README.md"

[profile.release]
lto = true
codegen-units = 1
