[package]
name = "tig-aarch64"
version = "0.1.0"
readme = "README.md"
license = "https://github.com/tig-foundation/tig-monorepo/tree/main/docs/agreements/end_user_license_agreement.pdf"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
tig-challenges = { path = "../tig-challenges" }
tig-algorithms = { path = "../tig-algorithms" }

[features]
entry_point = []
