[package]
name = "tig-algorithms"
version = "0.1.0"
readme = "README.md"
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.81"
cudarc = { git = "https://github.com/tig-foundation/cudarc.git", branch = "runtime-fuel/cudnn-cublas", features = [
    "cuda-version-from-build-system",
], optional = true }
rand = { version = "0.8.5", default-features = false, features = [
    "std_rng",
    "small_rng",
] }
tig-challenges = { path = "../tig-challenges", features = [
    "hide_verification",
] }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
