[package]
name = "tig-algorithms"
version = "0.1.0"
readme = "README.md"
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.81"
cudarc = { git = "https://github.com/tig-foundation/cudarc.git", branch = "runtime-fuel/cudnn-cublas", features = [
    "cuda-version-from-build-system",
], optional = true }
ndarray = "0.15.6"
rand = { version = "0.8.5", default-features = false, features = [
    "std_rng",
    "small_rng",
] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }
tig-challenges = { path = "../tig-challenges", features = [
    "hide_verification",
] }

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "test_leverage"
required-features = ["cur_decomposition"]

[features]
c001 = ["tig-challenges/c001"]
satisfiability = ["c001"]
c002 = ["tig-challenges/c002"]
vehicle_routing = ["c002"]
c003 = ["tig-challenges/c003"]
knapsack = ["c003"]
c004 = ["cudarc", "tig-challenges/c004"]
vector_search = ["c004"]
c005 = ["cudarc", "tig-challenges/c005"]
hypergraph = ["c005"]
c006 = ["cudarc", "tig-challenges/c006"]
neuralnet_optimizer = ["c006"]
c008 = ["cudarc", "tig-challenges/c008"]
cur_decomposition = ["c008"]
