[package]
name = "tig-api"
version = "0.1.0"
readme = "README.md"
license = "https://github.com/tig-foundation/tig-monorepo/tree/main/docs/agreements/end_user_license_agreement.pdf"
authors.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.81"
query_map = { version = "0.7.0", features = ["url-query"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }
tig-utils = { path = "../tig-utils" }
tig-structs = { path = "../tig-structs" }

[features]
request = ["tig-utils/request"]
request-js = ["tig-utils/request-js"]
