[package]
name = "tig-benchmarker"
version = "0.1.0"
readme = "README.md"
license = "https://github.com/tig-foundation/tig-monorepo/tree/main/docs/agreements/end_user_license_agreement.pdf"
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.4", optional = true }
futures = { version = "0.3.30" }
gloo-timers = { version = "0.3.0", optional = true, features = ["futures"] }
hostname = { version = "0.4", optional = true }
js-sys = { version = "0.3.68", optional = true }
once_cell = "1.19.0"
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
rand_distr = { version = "0.4.3", default-features = false, features = [
    "alloc",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.113" }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
tig-api = { path = "../tig-api" }
tig-structs = { path = "../tig-structs" }
tig-utils = { path = "../tig-utils" }
tig-worker = { path = "../tig-worker" }
tokio = { version = "1.37.0", features = ["full"], optional = true }
wasm-bindgen = { version = "0.2.91", features = [
    "serde-serialize",
], optional = true }
wasm-bindgen-futures = { version = "0.4.41", optional = true }
warp = { version = "0.3.7", optional = true }
web-sys = { version = "0.3.68", features = ['console'], optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["browser"]
standalone = [
    "dep:clap",
    "dep:tokio",
    "tig-api/request",
    "dep:warp",
    "dep:hostname",
]
browser = [
    "dep:gloo-timers",
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:serde-wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "tig-api/request-js",
]
