[package]
name = "tig-binary"
version = "0.1.0"
readme = "README.md"
license = "https://github.com/tig-foundation/tig-monorepo/tree/main/docs/agreements/end_user_license_agreement.pdf"
authors.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
cudarc = { git = "https://github.com/tig-foundation/cudarc.git", branch = "automatic-fuel-check", features = [
    "cuda-version-from-build-system",
], optional = true }
tig-challenges = { path = "../tig-challenges" }
tig-algorithms = { path = "../tig-algorithms" }

[features]
entry_point = []
cuda = ["cudarc"]
c001 = ["tig-algorithms/c001", "tig-challenges/c001"]
satisfiability = ["c001"]
c002 = ["tig-algorithms/c002", "tig-challenges/c002"]
vehicle_routing = ["c002"]
c003 = ["tig-algorithms/c003", "tig-challenges/c003"]
knapsack = ["c003"]
c004 = ["cuda", "tig-algorithms/c004", "tig-challenges/c004"]
vector_search = ["c004"]
c005 = ["cuda", "tig-algorithms/c005", "tig-challenges/c005"]
hypergraph = ["c005"]
