[package]
name = "tig-binary"
version = "0.1.0"
readme = "README.md"
license = "https://github.com/tig-foundation/tig-monorepo/tree/main/docs/agreements/end_user_license_agreement.pdf"
authors.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow = "1.0.81"
cudarc = { git = "https://github.com/tig-foundation/cudarc.git", branch = "runtime-fuel/cudnn-cublas", features = [
    "cuda-version-from-build-system",
], optional = true }
serde_json = { version = "1.0.113" }
tig-challenges = { path = "../tig-challenges", features = [
    "hide_verification",
] }
tig-algorithms = { path = "../tig-algorithms" }

[features]
entry_point = []
cuda = ["cudarc"]
