[package]
name = "tig-binary"
version = "0.1.0"
readme = "README.md"
license = "https://github.com/tig-foundation/tig-monorepo/tree/main/docs/agreements/end_user_license_agreement.pdf"
authors.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow = "1.0.81"
cudarc = { git = "https://github.com/tig-foundation/cudarc.git", branch = "runtime-fuel/cudnn-cublas", features = [
    "cuda-version-from-build-system",
], optional = true }
serde_json = { version = "1.0.113" }
tig-challenges = { path = "../tig-challenges", features = [
    "hide_verification",
] }
tig-algorithms = { path = "../tig-algorithms" }

[features]
entry_point = []
cuda = ["cudarc"]
c001 = ["tig-algorithms/c001", "tig-challenges/c001"]
satisfiability = ["c001"]
c002 = ["tig-algorithms/c002", "tig-challenges/c002"]
vehicle_routing = ["c002"]
c003 = ["tig-algorithms/c003", "tig-challenges/c003"]
knapsack = ["c003"]
c004 = ["cuda", "tig-algorithms/c004", "tig-challenges/c004"]
vector_search = ["c004"]
c005 = ["cuda", "tig-algorithms/c005", "tig-challenges/c005"]
hypergraph = ["c005"]
c006 = ["cuda", "tig-algorithms/c006", "tig-challenges/c006"]
neuralnet_optimizer = ["c006"]
c007 = ["tig-algorithms/c007", "tig-challenges/c007"]
job_scheduling = ["c007"]
