[package]
name = "tig-challenges"
version = "0.1.0"
readme = "README.md"
license = "https://github.com/tig-foundation/tig-monorepo/tree/main/docs/agreements/end_user_license_agreement.pdf"
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.81"
cudarc = { git = "https://github.com/tig-foundation/cudarc.git", branch = "runtime-fuel/cudnn-cublas", features = [
    "cuda-version-from-build-system",
], optional = true }
ndarray = "0.15.6"
rand = { version = "0.8.5", default-features = false, features = [
    "std_rng",
    "small_rng",
] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }
statrs = { version = "0.18.0" }
bincode = { version = "1.3", optional = true }
flate2 = { version = "1.0", optional = true }
base64 = { version = "0.21", optional = true }

[features]
pub_baseline = []
bincode_solution = ["bincode", "flate2", "base64"]
c001 = []
satisfiability = ["c001"]
c002 = []
vehicle_routing = ["c002"]
c003 = []
knapsack = ["c003"]
c004 = ["cudarc"]
vector_search = ["c004"]
c005 = ["cudarc"]
hypergraph = ["c005"]
c006 = ["cudarc", "cudarc/cublas", "cudarc/cudnn", "bincode_solution"]
neuralnet_optimizer = ["c006"]
