[package]
name = "tig-challenges"
version = "0.1.0"
readme = "README.md"
license = "https://github.com/tig-foundation/tig-monorepo/tree/main/docs/agreements/end_user_license_agreement.pdf"
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.81"
base64 = "0.21"
bincode = "1.3"
cudarc = { git = "https://github.com/tig-foundation/cudarc.git", branch = "runtime-fuel/cudnn-cublas", features = [
    "cuda-version-from-build-system",
], optional = true }
flate2 = "1.0"
paste = "1.0.15"
nalgebra = "0.33"
ndarray = "0.15.6"
rand = { version = "0.8.5", default-features = false, features = [
    "std_rng",
    "small_rng",
] }
rand_distr = "0.4.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }
statrs = { version = "0.18.0" }
blake3 = { version = "1.5.4", optional = true }
spartan = { version = "0.9.0", optional = true }
serde_bytes = { version = "0.11.17", optional = true }
merlin = { version = "3.0", optional = true }
curve25519-dalek = { version = "4.1", features = ["serde"], optional = true }
rand_chacha = { version = "0.3", optional = true }
sha2 = { version = "0.10", optional = true }

[features]
hide_verification = []
c001 = []
satisfiability = ["c001"]
c002 = []
vehicle_routing = ["c002"]
c003 = []
knapsack = ["c003"]
c004 = ["cudarc"]
vector_search = ["c004"]
c005 = ["cudarc"]
hypergraph = ["c005"]
c006 = ["cudarc", "cudarc/cublas", "cudarc/cudnn"]
neuralnet_optimizer = ["c006"]
c007 = []
job_scheduling = ["c007"]
c008 = []
energy_arbitrage = ["c008"]
c009 = [
    "blake3",
    "spartan",
    "curve25519-dalek",
    "merlin",
    "rand_chacha",
    "sha2",
    "serde_bytes",
]
zk_optimization = ["c009"]
