[package]
name = "tig-native-wrapper"
version = "0.1.0"
readme = "README.md"
license = "https://github.com/tig-foundation/tig-monorepo/tree/main/docs/agreements/end_user_license_agreement.pdf"
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
libloading = "0.8.6"
tig-challenges = { path = "../tig-challenges" }
tig-utils = { path = "../tig-utils" }
tig-structs = { path = "../tig-structs" }