[package]
name = "tig-protocol"
version = "0.1.0"
readme = "README.md"
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
anyhow = { version = "1.0.81" }
rand = "0.8.4"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }
tig-structs = { path = "../tig-structs" }
tig-utils = { path = "../tig-utils" }

[lib]
crate-type = ["cdylib", "rlib"]
