[package]
name = "tig-protocol"
version = "0.1.0"
readme = "README.md"
license = "https://github.com/tig-foundation/tig-monorepo/tree/main/docs/agreements/end_user_license_agreement.pdf"
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
anyhow = { version = "1.0.81" }
logging_timer = "1.1.1"
hex = "0.4.3"
rand = "0.8.4"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }
tig-structs = { path = "../tig-structs" }
tig-utils = { path = "../tig-utils", features = ["web3"] }

[lib]
crate-type = ["cdylib", "rlib"]
