[package]
name = "tig-structs"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }
tig-utils = { path = "../tig-utils" }

[lib]
crate-type = ["cdylib", "rlib"]
