[package]
name = "tig-verifier"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4" }
cudarc = { git = "https://github.com/tig-foundation/cudarc.git", branch = "automatic-fuel-check", features = [
    "cuda-version-from-build-system",
], optional = true }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }
tig-challenges = { path = "../tig-challenges" }
tig-structs = { path = "../tig-structs" }
tig-utils = { path = "../tig-utils" }

[features]
cuda = ["cudarc"]
c001 = ["tig-challenges/c001"]
satisfiability = ["c001"]
c002 = ["tig-challenges/c002"]
vehicle_routing = ["c002"]
c003 = ["tig-challenges/c003"]
knapsack = ["c003"]
c004 = ["cuda", "tig-challenges/c004"]
vector_search = ["c004"]
c005 = ["cuda", "tig-challenges/c005"]
hypergraph = ["c005"]
