[package]
name = "tig-wasm"
version = "0.1.0"
readme = "README.md"
license = "https://github.com/tig-foundation/tig-monorepo/tree/main/docs/agreements/end_user_license_agreement.pdf"
authors.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
tig-algorithms = { path = "../tig-algorithms" }
tig-challenges = { path = "../tig-challenges" }
tig-utils = { path = "../tig-utils" }
wee_alloc = { version = "0.4.5" }

[features]
entry-point = []
