[package]
name = "tig-worker"
version = "0.1.0"
readme = "README.md"
license = "https://github.com/tig-foundation/tig-monorepo/tree/main/docs/agreements/end_user_license_agreement.pdf"
authors.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.81"
bincode = "1.3.3"
clap = { version = "4.5.4" }
futures = "0.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["preserve_order"] }
tig-challenges = { path = "../tig-challenges" }
tig-structs = { path = "../tig-structs" }
tig-utils = { path = "../tig-utils" }
tokio = { version = "1.0", features = ["full"] }
wasmi = { git = "https://github.com/tig-foundation/wasmi.git", branch = "runtime_signature_v0.38.0" }
