[package]
name = "tig-worker"
version = "0.1.0"
readme = "README.md"
license = "https://github.com/tig-foundation/tig-monorepo/tree/main/docs/agreements/end_user_license_agreement.pdf"
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4" }
cudarc = { version = "0.16.2", features = [
    "cuda-version-from-build-system",
], optional = true }
futures = "0.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["preserve_order"] }
tempfile = "3.19.1"
tig-structs = { path = "../tig-structs" }
tig-utils = { path = "../tig-utils" }
tokio = { version = "1.0", features = ["full"] }

[features]
cuda = ["cudarc"]
